# remove-trash

./: application.logs  factorize(task2).py  logger.py  main.py  normalize.py  pyproject.toml
